--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>vue-youtube-gallery</title>
+    <title>vue-youtube-search</title>
   </head>
   <body>
     <div id="app"></div>
